configmap-envvar-5-ways.yaml
#####imp points
--REMEMBER if STARTING WORD-- envFrom: means full cm , env: mean 1 key  , volumeMounts: means also full cm or if key as items given

1) give full configmap                     2) gives 1st=direct env/2nd=key/3rd=downward api         3) give volumes

envFrom:                                       env:                                                  volumeMounts:  
        - configMapRef:                             - name: PLAYER_INITIAL_LIVES
            name: myconfigmap                         valueFrom:
                                                        configMapKeyRef:   
                                                          name: game-demo
                                                          key: player_initial_lives 


apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-env
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-env
  template:
    metadata:
      labels:
        app: nginx-env
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        
        command: ["/bin/sh", "-c"]
        args: [
          "echo $MESSAGE && echo My Pod Name is $POD_NAME && echo $CONFIG_MESSAGE && cat /etc/config/message && sleep infinity"
        ]
        
        # Volume Mount for ConfigMap (Method 4)
        volumeMounts:
        - name: config-volume
          mountPath: /etc/config

      # Volumes Section for ConfigMap (Method 4)
      volumes:
      - name: config-volume
        configMap:
          name: my-configmap
