ingress-sample.yaml
# Ingress to route external traffic to the service
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-app-ingress
  namespace: production
  annotations:
    kubernetes.io/ingress.class: alb # For AWS ALB
    alb.ingress.kubernetes.io/scheme: internet-facing # or internal
    alb.ingress.kubernetes.io/target-type: ip # or instance
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:your-region:your-account:certificate/your-cert-id #Replace with your certificate ARN
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-app-service
            port:
              number: 80
